# netbox-zabbix-sync-webserver

./: .gitignore  README.md  cli.py  config.py  main.py  middleware.py  models.py  pyproject.toml  requirements.txt  routes.py  security.py  sync_manager.py  test_call.py  test_security_break.py  token_store.py  webhook_secrets.db  webhook_secrets.db.key
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: __init__.py  config.py  middleware.py  models.py  routes.py  security.py  sync_manager.py  token_store.py
scripts/: test_call.py  test_security_break.py
tests/: conftest.py  test_endpoints.py  test_helpers.py  test_run_sync.py  test_security.py  test_security_integration.py  test_sync_instance.py  test_token_store.py
