[project]
name = "netbox-zabbix-sync-webserver"
version = "0.1.0"
description = "FastAPI webhook server for triggering NetBox-Zabbix synchronization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.129.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
