[project]
name = "netbox-zabbix-sync-webserver"
version = "0.1.0"
description = "FastAPI webhook server for triggering NetBox-Zabbix synchronization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "netbox-zabbix-sync>=4.0.1",
    "fastapi[standard]>=0.129.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "ty>=0.0.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::ResourceWarning",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    "scripts/",
]
